--- a/public/html/feedback.html
+++ b/public/html/feedback.html
@@ -5,16 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feedback</title>
     <link rel="stylesheet" href="../css/index.css" />
+    <script src="../js/components/header.js" type="text/javascript" defer></script>
+    <script src="../js/components/footer.js" type="text/javascript" defer></script>
 </head>
 <body>
-    <header id="header">
-        <nav id="nav">
-            <img src="../img/203191.ico" id="logo" />
-            <div class="nav-elem"><a class="nav-link" href="/"><span>Home</span></a></div>
-            <div class="nav-elem"><a class="nav-link" href="/feedback"><span>Feedback</span></a></div>
-            <div class="nav-elem"><a class="nav-link" href="/about"><span>About</span></a></div>
-        </nav>
-    </header>
-    Feedback page
+    <header-component></header-component>
+
+    <main>Feedback page</main>
+
+    <footer-component></footer-component>
 </body>
 </html>
