--- a/public/html/help.html
+++ b/public/html/help.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About</title>
+    <title>Help</title>
     <link rel="stylesheet" href="../css/index.css" />
     <script src="../js/components/header.js" type="text/javascript" defer></script>
     <script src="../js/components/footer.js" type="text/javascript" defer></script>
@@ -11,7 +11,7 @@
 <body>
     <header-component></header-component>
 
-    <main>About page</main>
+    <main>Help page</main>
 
     <footer-component></footer-component>
 </body>
