--- a/public/html/index.html
+++ b/public/html/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Dent.ai</title>
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="icon" type="image/x-icon" href="../img/logo.ico">
     <script src="../js/components/header.js" type="text/javascript" defer></script>
