✨ Add empty slider

--- a/public/html/feedback.html
+++ b/public/html/feedback.html
@@ -6,13 +6,81 @@
     <title>Отзывы</title>
     <link rel="icon" type="image/x-icon" href="../img/logo.ico">
     <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../css/feedback.css" />
     <script src="../js/components/header.js" type="text/javascript" defer></script>
     <script src="../js/components/footer.js" type="text/javascript" defer></script>
 </head>
 <body>
     <header-component></header-component>
 
-    <main>Feedback page</main>
+    <main>
+        <section class="feedback-head">
+            <h1>Отзывы</h1>
+        </section>
+        <section class="reviews-container">
+<!--             <div>
+                <h2>Пока что здесь пусто...</h2>
+            </div> -->
+            <div class="review-wrapper">
+                <div class="review">
+                    <section>
+                        <h3>Иван Иванов</h3>
+                        <p>Кто-то там</p>
+                    </section>
+                    <section>
+                        <p>цдлуомтцуж мтцукажшцутацушо иттсцушщмацрущзук ашпрцушйтпажщр пхрйацйзущшамтщзм шрцхщшм2рщашзцтущхазрцух9арз</p>
+                    </section>
+                </div>
+            </div>
+            <div class="review-wrapper">
+                <div class="review">
+                    <section>
+                        <h3>Иван Иванов</h3>
+                        <p>Кто-то там</p>
+                    </section>
+                    <section>
+                        <p>цдлуомтцуж мтцукажшцутацушо иттсцушщмацрущзук ашпрцушйтпажщр пхрйацйзущшамтщзм шрцхщшм2рщашзцтущхазрцух9арз</p>
+                    </section>
+                </div>
+            </div><div class="review-wrapper">
+                <div class="review">
+                    <section>
+                        <h3>Иван Иванов</h3>
+                        <p>Кто-то там</p>
+                    </section>
+                    <section>
+                        <p>цдлуомтцуж мтцукажшцутацушо иттсцушщмацрущзук ашпрцушйтпажщр пхрйацйзущшамтщзм шрцхщшм2рщашзцтущхазрцух9арз
+                            sdvsdavsdavsd
+                            asdvsadv
+                            asdvsadvsadv
+                            sadv
+                            sd
+                        </p>
+                    </section>
+                </div>
+            </div><div class="review-wrapper">
+                <div class="review">
+                    <section>
+                        <h3>Иван Иванов</h3>
+                        <p>Кто-то там</p>
+                    </section>
+                    <section>
+                        <p>цдлуомтцуж мтцукажшцутацушо иттсцушщмацрущзук ашпрцушйтпажщр пхрйацйзущшамтщзм шрцхщшм2рщашзцтущхазрцух9арз</p>
+                    </section>
+                </div>
+            </div><div class="review-wrapper">
+                <div class="review">
+                    <section>
+                        <h3>Иван Иванов</h3>
+                        <p>Кто-то там</p>
+                    </section>
+                    <section>
+                        <p>цдлуомтцуж мтцукажшцутацушо иттсцушщмацрущзук ашпрцушйтпажщр пхрйацйзущшамтщзм шрцхщшм2рщашзцтущхазрцух9арз</p>
+                    </section>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer-component></footer-component>
 </body>
