--- a/public/html/index.html
+++ b/public/html/index.html
@@ -6,15 +6,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dent.ai</title>
     <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../css/slider.css" />
     <link rel="icon" type="image/x-icon" href="../img/logo.ico">
     <script src="../js/components/header.js" type="text/javascript" defer></script>
     <script src="../js/components/footer.js" type="text/javascript" defer></script>
+    <script src="../js/slider.js" type="text/javascript"></script>
 </head>
 
 <body>
     <header-component></header-component>
 
-    <main>Some text</main>
+    <main>
+        <section class="main-slider">
+            <h1>Искусственный интеллект для стоматологов</h1>
+            <div class="slider">
+  
+                <a href="#slide-1">1</a>
+                <a href="#slide-2">2</a>
+                <a href="#slide-3">3</a>
+                <a href="#slide-4">4</a>
+                <a href="#slide-5">5</a>
+              
+                <div class="slides">
+                  <div id="slide-1">
+                    1
+                  </div>
+                  <div id="slide-2">
+                    2
+                  </div>
+                  <div id="slide-3">
+                    3
+                  </div>
+                  <div id="slide-4">
+                    4
+                  </div>
+                  <div id="slide-5">
+                    5
+                  </div>
+                </div>
+              </div>
+        </section>
+    </main>
 
     <footer-component></footer-component>
 </body>
