💄 Add some styles

--- a/public/html/feedback.html
+++ b/public/html/feedback.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <script src="../js/components/header.js" type="text/javascript" defer></script>
     <script src="../js/components/footer.js" type="text/javascript" defer></script>
 </head>
+
 <body>
     <header-component></header-component>
 
@@ -18,7 +20,7 @@
             <h1>Отзывы</h1>
         </section>
         <section class="reviews-container">
-<!--             <div>
+            <!--             <div>
                 <h2>Пока что здесь пусто...</h2>
             </div> -->
             <div class="review-wrapper">
@@ -28,7 +30,14 @@
                         <p>Кто-то там</p>
                     </section>
                     <section>
-                        <p>цдлуомтцуж мтцукажшцутацушо иттсцушщмацрущзук ашпрцушйтпажщр пхрйацйзущшамтщзм шрцхщшм2рщашзцтущхазрцух9арз</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula, risus at pretium
+                            efficitur, magna ante gravida nunc, ac bibendum lacus felis malesuada velit. Quisque vitae
+                            nibh ante. In at dignissim ex, non eleifend augue. Nulla at ex elementum, hendrerit lectus
+                            non, porta diam. Vestibulum fermentum lectus nibh, et fermentum urna pellentesque at.
+                            Curabitur vitae aliquam metus. Sed lacus nunc, fringilla eu accumsan a, euismod a nisl.
+                            Mauris mauris lorem, ornare non ex eu, tincidunt tempor sem. Aliquam pretium, diam eu
+                            bibendum ultricies, est ligula elementum metus, sed malesuada nulla tellus sed lacus.
+                            Pellentesque pharetra eros eleifend lobortis sollicitudin.</p>
                     </section>
                 </div>
             </div>
@@ -39,43 +48,30 @@
                         <p>Кто-то там</p>
                     </section>
                     <section>
-                        <p>цдлуомтцуж мтцукажшцутацушо иттсцушщмацрущзук ашпрцушйтпажщр пхрйацйзущшамтщзм шрцхщшм2рщашзцтущхазрцух9арз</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula, risus at pretium
+                            efficitur, magna ante gravida nunc, ac bibendum lacus felis malesuada velit. Quisque vitae
+                            nibh ante. In at dignissim ex, non eleifend augue. Nulla at ex elementum, hendrerit lectus
+                            non, porta diam. Vestibulum fermentum lectus nibh, et fermentum urna pellentesque at.
+                            Curabitur vitae aliquam metus. Sed lacus nunc, fringilla eu accumsan a, euismod a nisl.
+                            Mauris mauris lorem, ornare non ex eu, tincidunt tempor sem.</p>
                     </section>
                 </div>
-            </div><div class="review-wrapper">
+            </div>
+            <div class="review-wrapper">
                 <div class="review">
                     <section>
                         <h3>Иван Иванов</h3>
                         <p>Кто-то там</p>
                     </section>
                     <section>
-                        <p>цдлуомтцуж мтцукажшцутацушо иттсцушщмацрущзук ашпрцушйтпажщр пхрйацйзущшамтщзм шрцхщшм2рщашзцтущхазрцух9арз
-                            sdvsdavsdavsd
-                            asdvsadv
-                            asdvsadvsadv
-                            sadv
-                            sd
+                        <p>Integer vehicula, risus at pretium efficitur, magna ante gravida nunc, ac bibendum lacus
+                            felis malesuada velit. Quisque vitae nibh ante. In at dignissim ex, non eleifend augue.
+                            Nulla at ex elementum, hendrerit lectus non, porta diam. Vestibulum fermentum lectus nibh,
+                            et fermentum urna pellentesque at. Curabitur vitae aliquam metus. Sed lacus nunc, fringilla
+                            eu accumsan a, euismod a nisl. Mauris mauris lorem, ornare non ex eu, tincidunt tempor sem.
+                            Aliquam pretium, diam eu bibendum ultricies, est ligula elementum metus, sed malesuada nulla
+                            tellus sed lacus. Pellentesque pharetra eros eleifend lobortis sollicitudin.
                         </p>
-                    </section>
-                </div>
-            </div><div class="review-wrapper">
-                <div class="review">
-                    <section>
-                        <h3>Иван Иванов</h3>
-                        <p>Кто-то там</p>
-                    </section>
-                    <section>
-                        <p>цдлуомтцуж мтцукажшцутацушо иттсцушщмацрущзук ашпрцушйтпажщр пхрйацйзущшамтщзм шрцхщшм2рщашзцтущхазрцух9арз</p>
-                    </section>
-                </div>
-            </div><div class="review-wrapper">
-                <div class="review">
-                    <section>
-                        <h3>Иван Иванов</h3>
-                        <p>Кто-то там</p>
-                    </section>
-                    <section>
-                        <p>цдлуомтцуж мтцукажшцутацушо иттсцушщмацрущзук ашпрцушйтпажщр пхрйацйзущшамтщзм шрцхщшм2рщашзцтущхазрцух9арз</p>
                     </section>
                 </div>
             </div>
@@ -84,4 +80,5 @@
 
     <footer-component></footer-component>
 </body>
+
 </html>
