✨ Add login page

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -19,14 +19,16 @@
     <main>
         <section class="main-slider">
             <h1>Искусственный интеллект для стоматологов</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula, risus at pretium
-              efficitur, magna ante gravida nunc, ac bibendum lacus felis malesuada velit. Quisque vitae
-              nibh ante. In at dignissim ex, non eleifend augue. Nulla at ex elementum, hendrerit lectus
-              non, porta diam. Vestibulum fermentum lectus nibh, et fermentum urna pellentesque at.
-              Curabitur vitae aliquam metus. Sed lacus nunc, fringilla eu accumsan a, euismod a nisl.
-              Mauris mauris lorem, ornare non ex eu, tincidunt tempor sem. Aliquam pretium, diam eu
-              bibendum ultricies, est ligula elementum metus, sed malesuada nulla tellus sed lacus.
-              Pellentesque pharetra eros eleifend lobortis sollicitudin.</p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula, risus at pretium
+                efficitur, magna ante gravida nunc, ac bibendum lacus felis malesuada velit. Quisque vitae
+                nibh ante. In at dignissim ex, non eleifend augue. Nulla at ex elementum, hendrerit lectus
+                non, porta diam. Vestibulum fermentum lectus nibh, et fermentum urna pellentesque at.
+                Curabitur vitae aliquam metus. Sed lacus nunc, fringilla eu accumsan a, euismod a nisl.
+                Mauris mauris lorem, ornare non ex eu, tincidunt tempor sem. Aliquam pretium, diam eu
+                bibendum ultricies, est ligula elementum metus, sed malesuada nulla tellus sed lacus.
+                Pellentesque pharetra eros eleifend lobortis sollicitudin.
+            </p>
             <div class="slider">
   
                 <a href="#slide-1">1</a>
