--- a/public/html/index.html
+++ b/public/html/index.html
@@ -10,55 +10,41 @@
     <link rel="icon" type="image/x-icon" href="../img/logo.ico">
     <script src="../js/components/header.js" type="text/javascript" defer></script>
     <script src="../js/components/footer.js" type="text/javascript" defer></script>
-    <script src="../js/slider.js" type="text/javascript"></script>
 </head>
 
 <body>
     <header-component></header-component>
 
     <main>
+        <h1>Искусственный интеллект для стоматологов</h1>
         <section class="main-slider">
-            <h1>Искусственный интеллект для стоматологов</h1>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula, risus at pretium
-                efficitur, magna ante gravida nunc, ac bibendum lacus felis malesuada velit. Quisque vitae
-                nibh ante. In at dignissim ex, non eleifend augue. Nulla at ex elementum, hendrerit lectus
-                non, porta diam. Vestibulum fermentum lectus nibh, et fermentum urna pellentesque at.
-                Curabitur vitae aliquam metus. Sed lacus nunc, fringilla eu accumsan a, euismod a nisl.
-                Mauris mauris lorem, ornare non ex eu, tincidunt tempor sem. Aliquam pretium, diam eu
-                bibendum ultricies, est ligula elementum metus, sed malesuada nulla tellus sed lacus.
-                Pellentesque pharetra eros eleifend lobortis sollicitudin.
+                Наше приложение поможет точнее диагностировать заболевания ротовой полости по
+                панорамным рентгеновским снимкам. Оно поможет как начинающим специалистам, так и
+                практикующим профессионалам.
             </p>
-            <div class="slider">
-  
-                <a href="#slide-1">1</a>
-                <a href="#slide-2">2</a>
-                <a href="#slide-3">3</a>
-                <a href="#slide-4">4</a>
-                <a href="#slide-5">5</a>
-              
-                <div class="slides">
-                  <div id="slide-1">
-                    1
-                  </div>
-                  <div id="slide-2">
-                    2
-                  </div>
-                  <div id="slide-3">
-                    3
-                  </div>
-                  <div id="slide-4">
-                    4
-                  </div>
-                  <div id="slide-5">
-                    5
-                  </div>
+            <div class="slider-container">
+                <div class="slider">
+                    <img src="../img/slider-1.jpg" alt="Приём у стоматолога">
+                    <img src="../img/slider-2.jpg" alt="Панорамный снимок">
+                    <img src="../img/slider-3.jpg" alt="Анализ снимка">
                 </div>
-              </div>
+                <button class="prev-button" aria-label="Посмотреть предыдущий слайд">&lt;</button>
+                <button class="next-button" aria-label="Посмотреть следующий слайд">&gt</button>
+            </div>
+        </section>
+        <section>
+            <p>
+                Данные компьютерной томографии выгружается в программу с искусственным интеллектом,
+                которая умеет сканировать и диагностировать зубные патологии, а дальше фиксирует
+                их в виде понятного отчета. Таким образом, врач может получить более подробную, а
+                главное - независимую клиническую картину, а значит, составить самый эффективный план лечения.
+            </p>
         </section>
     </main>
 
     <footer-component></footer-component>
 </body>
+<script src="../js/slider.js"></script>
 
 </html>
