--- a/public/html/index.html
+++ b/public/html/index.html
@@ -17,7 +17,7 @@
 
     <main>
         <h1>Искусственный интеллект для стоматологов</h1>
-        <section class="main-slider">
+        <section class="flexrow-container">
             <p>
                 Наше приложение поможет точнее диагностировать заболевания ротовой полости по
                 панорамным рентгеновским снимкам. Оно поможет как начинающим специалистам, так и
@@ -33,12 +33,26 @@
                 <button class="next-button" aria-label="Посмотреть следующий слайд">&gt</button>
             </div>
         </section>
-        <section>
+        <section class="main-pros">
             <p>
                 Данные компьютерной томографии выгружается в программу с искусственным интеллектом,
                 которая умеет сканировать и диагностировать зубные патологии, а дальше фиксирует
                 их в виде понятного отчета. Таким образом, врач может получить более подробную, а
                 главное - независимую клиническую картину, а значит, составить самый эффективный план лечения.
+            </p>
+            <h2>Чем вам поможет наш сервис?</h2>
+            <ul>
+                <li>Более точный диагноз</li>
+                <li>Наглядное объяснение для пациента</li>
+                <li>Независимое решение</li>
+            </ul>
+        </section>
+        <section class="flexrow-container">
+            <img src="../img/dentist-img.jpg"/>
+            <p>
+                Получите доступ к эффективному инструменту уже сейчас.
+                Использование современных технологий вместе Dent.io
+                на приёме - ваше конкурентное преимущество!
             </p>
         </section>
     </main>
