--- a/public/html/login.html
+++ b/public/html/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>О нас</title>
+    <title>Вход</title>
     <link rel="icon" type="image/x-icon" href="../img/logo.ico">
     <link rel="stylesheet" href="../css/index.css" />
     <script src="../js/components/header.js" type="text/javascript" defer></script>
@@ -12,7 +12,7 @@
 <body>
     <header-component></header-component>
 
-    <main>About page</main>
+    <main>Login page</main>
 
     <footer-component></footer-component>
 </body>
