✨ Add sending form

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -33,7 +33,7 @@
                 <button class="next-button" aria-label="Посмотреть следующий слайд">&gt</button>
             </div>
         </section>
-        <section class="main-pros">
+        <section class="main-section">
             <p>
                 Данные компьютерной томографии выгружается в программу с искусственным интеллектом,
                 которая умеет сканировать и диагностировать зубные патологии, а дальше фиксирует
