✨ Add drag-and-drop

--- a/public/html/about.html
+++ b/public/html/about.html
@@ -12,7 +12,21 @@
 <body>
     <header-component></header-component>
 
-    <main>About page</main>
+    <main>
+        <section class="flexrow-container">
+            <div>
+                <h1>О нас</h1>
+                <p>Автор сайта - Задерей Петр Алексеевич</p>
+                <h3>Контакты</h3>
+                <ul>
+                    <li>+7-999-999-99-99</li>
+                    <li>pazaderey@edu.hse.ru</li>
+                    <li>Москва, ул. Таллинская, 34</li>
+                </ul>
+            </div>
+            <img src="../img/miem.jpg"/>
+        </section>
+    </main>
 
     <footer-component></footer-component>
 </body>
