--- a/public/html/feedback.html
+++ b/public/html/feedback.html
@@ -78,7 +78,7 @@
                         <input class="regular" type="text" name="name" required>
                     </div>
                     <div class="input-container">
-                        <label>Чем вы занимаетесь</label>
+                        <label>Вид деятельности</label>
                         <input class="regular" type="text" name="job" required>
                     </div>
                     <div class="input-container">
