--- a/public/html/help.html
+++ b/public/html/help.html
@@ -12,7 +12,18 @@
 <body>
     <header-component></header-component>
 
-    <main>Help page</main>
+    <main>
+        <section>
+            <h1>Руководства</h1>
+            <ul>
+                <li>
+                    <a href="../docs/kak-vygruzit-dicom-iz-klkt-apparata_1.1-1-1.pdf" target="_blank" class="black-link">
+                        Как выгрузить DICOM из КЛКТ аппарата
+                    </a>
+                </li>
+            </ul>
+        </section>
+    </main>
 
     <footer-component></footer-component>
 </body>
