--- a/public/html/detect.html
+++ b/public/html/detect.html
@@ -20,7 +20,7 @@
                 Загрузите файл с панорамным рентгеновским снимком для начала диагностики в форму ниже.
             </p>
             <div id="drop-area">
-                <form class="detect-form">
+                <form id="detect-form">
                     <p>Перетащите или нажмите чтобы загрузить файл</p>
                     <input type="file" id="detect-input-file" accept="image/*" onchange="handleDrop">
                     <label class="button" for="detect-input-file">Выбрать файл</label>
