💄 Add grid layout

--- a/public/html/feedback.html
+++ b/public/html/feedback.html
@@ -30,7 +30,7 @@
                         <h3>Иван Иванов</h3>
                         <p>Кто-то там</p>
                     </section>
-                    <section>
+                    <section class="review-text">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula, risus at pretium
                             efficitur, magna ante gravida nunc, ac bibendum lacus felis malesuada velit. Quisque vitae
                             nibh ante. In at dignissim ex, non eleifend augue. Nulla at ex elementum, hendrerit lectus
@@ -45,7 +45,7 @@
                         <h3>Иван Иванов</h3>
                         <p>Кто-то там</p>
                     </section>
-                    <section>
+                    <section class="review-text">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer vehicula, risus at pretium
                             efficitur, magna ante gravida nunc, ac bibendum lacus felis malesuada velit. Quisque vitae
                             nibh ante. In at dignissim ex, non eleifend augue. Nulla at ex elementum, hendrerit lectus
@@ -59,7 +59,7 @@
                         <h3>Иван Иванов</h3>
                         <p>Кто-то там</p>
                     </section>
-                    <section>
+                    <section class="review-text">
                         <p>Integer vehicula, risus at pretium efficitur, magna ante gravida nunc, ac bibendum lacus
                             felis malesuada velit. Quisque vitae nibh ante. In at dignissim ex, non eleifend augue.
                             Nulla at ex elementum, hendrerit lectus non, porta diam. Vestibulum fermentum lectus nibh,
