--- a/public/html/login.html
+++ b/public/html/login.html
@@ -16,7 +16,7 @@
 
     <main>
         <section id="login">
-            <form class="flexcol-container flex-centered login-form-container">
+            <form class="flexcol-container flex-centered login-form-container" method="get" action="/profile">
                 <div class="flexcol-container login-container">
                     <label>Логин</label>
                     <input type="text" required>
