--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Профиль</title>
+    <link rel="icon" type="image/x-icon" href="../img/logo.ico">
+    <link rel="stylesheet" href="../css/index.css" />
+    <script src="../js/components/header.js" type="text/javascript" defer></script>
+    <script src="../js/components/footer.js" type="text/javascript" defer></script>
 </head>
 <body>
-    
+    <header-component></header-component>
+
+    <main>
+        
+    </main>
+
+    <footer-component></footer-component>
 </body>
 </html>
