--- a/public/html/profile.html
+++ b/public/html/profile.html
@@ -13,7 +13,12 @@
     <header-component></header-component>
 
     <main>
-        
+        <section>
+
+        </section>
+        <section>
+            <h4>История запросов</h4>
+        </section>
     </main>
 
     <footer-component></footer-component>
