--- a/public/html/feedback.html
+++ b/public/html/feedback.html
@@ -88,7 +88,9 @@
                     <div class="description-container">
                         <textarea class="description" name="review" required></textarea>
                     </div>
-                    <input class="button" type="submit">
+                    <div id="button-holder">
+                        <input class="button" type="submit">
+                    </div>
                 </div>
             </form>
         </section>
