--- a/public/html/index.html
+++ b/public/html/index.html
@@ -30,7 +30,7 @@
                     <img src="../img/slider-3.jpg" alt="Анализ снимка">
                 </div>
                 <button class="prev-button" aria-label="Посмотреть предыдущий слайд">&lt;</button>
-                <button class="next-button" aria-label="Посмотреть следующий слайд">&gt</button>
+                <button class="next-button" aria-label="Посмотреть следующий слайд">&gt;</button>
             </div>
         </section>
         <section class="main-section">
