--- a/public/html/about.html
+++ b/public/html/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
     <script src="../js/components/header.js" type="text/javascript" defer></script>
     <script src="../js/components/footer.js" type="text/javascript" defer></script>
 </head>
+
 <body>
     <header-component></header-component>
 
@@ -19,15 +21,16 @@
                 <p>Автор сайта - Задерей Петр Алексеевич</p>
                 <h3>Контакты</h3>
                 <ul>
-                    <li>+7-999-999-99-99</li>
-                    <li>pazaderey@edu.hse.ru</li>
+                    <li><a href="tel:+7999-999-9999" class="black-link">+7-999-999-99-99</a></li>
+                    <li><a href="mailto:pazaderey@edu.hse.ru" class="black-link">pazaderey@edu.hse.ru</a></li>
                     <li>Москва, ул. Таллинская, 34</li>
                 </ul>
             </div>
-            <img src="../img/miem.jpg"/>
+            <img src="../img/miem.jpg" />
         </section>
     </main>
 
     <footer-component></footer-component>
 </body>
+
 </html>
