--- a/public/html/about.html
+++ b/public/html/about.html
@@ -7,6 +7,7 @@
     <title>О нас</title>
     <link rel="icon" type="image/x-icon" href="../img/logo.ico">
     <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../css/about.css" />
     <script src="../js/components/header.js" type="text/javascript" defer></script>
     <script src="../js/components/footer.js" type="text/javascript" defer></script>
 </head>
@@ -15,7 +16,7 @@
     <header-component></header-component>
 
     <main>
-        <section class="flexrow-container">
+        <section class="grid-1row-container">
             <div>
                 <h1>О нас</h1>
                 <p>Автор сайта - Задерей Петр Алексеевич</p>
